Blogs CSS style is now aligned with main page style. Some minor mistates are fixed.

--- a/imagine.css
+++ b/imagine.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Barlow Semi Condensed&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Overpass Mono&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Monofett&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Silkscreen');
+@import url('https://fonts.googleapis.com/css?family=Inconsolata&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nova+Mono&display=swap');
 /* Variables. Feel free to edit these! */
 :root {
     --color-primary: #028090;
@@ -15,15 +14,16 @@
     --color-special-todo: #790604;
 
     /*--font-normal: Baskerville, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman";*/
-    --font-normal: 'Barlow Semi Condensed', Shadows;
-    --font-headings: 'Mono fett', Shadows;
+    --font-normal: 'Inconsolata', normal;
+    --font-subheadings: 'Silkscreen', normal;
+    --font-headings: 'Nova Mono', normal;
 
     --font-size-1: 33.57px;
     --font-size-2: 26.86px;
-    --font-size-3: 21.48px;
-    --font-size-4: 22.19px;
+    --font-size-3: 23.48px;
+    --font-size-4: 21.19px;
 
-    --font-size-small: 11px;
+    --font-size-small: 18px;
 }
 
 /* Selection color */
@@ -34,16 +34,26 @@
 
 /* Remove outer padding */
 html, body{
-    margin: 0;
-    padding: 0;
+    margin: 500x;
+    padding: 500x;
+    max-width: 1300px;
+
 }
 
 /* Heading styles */
-h1, h2, h3, h4, h5, h6{
-    color: var(--color-hard-black);
-    margin: 0;
-    padding: 0;
-    font-family: var(--font-headings)
+h2, h3, h4, h5, h6{
+    a{
+        color: black;
+        text-decoration: none;
+    }
+    float: right;
+    width: 93%;
+    margin-left: 1x;
+    padding: 1x;
+    color: inherit;
+    text-decoration: none;
+    font-family: var(--font-headings);
+    max-width: 2300px;                 
 }
 
 /* Scaled font sizes */
@@ -55,19 +65,42 @@ h4{font-size: var(--font-size-4);}
 h5{font-size: var(--font-size-4);}
 
 h1 > .subtitle{
-    font-size: 21.48px;
+    font-size: 18.48px;
+    font-family: var(--font-subheadings);
+    color: OrangeRed;
+                 
+}
+
+h1{
+    color: black;
+    margin: 100;
+    padding: 100;
+    color: inherit;
+    text-decoration: none;
+    font-family: var(--font-headings)
 }
 
 /* Normal text style(including code) */
 p, pre, ol, ul, table, code{
-    color: #444;
+    color: black;
     font-size: var(--font-size-4);
-    font-family: var(--font-normal)
+    font-family: var(--font-normal);
+    margin-left: 1x;
+    float: right;
+    width: 92%;
+    text-align: justify
 }
+li {
+    float: right;
+    width: 97%; 
+    margin-left: 10em;
+}
+
 
 /* Better anchor tags */
 a{
-    color: inherit;
+    color: RoyalBlue;
+    text-decoration: none;
 }
 
 a:hover{
@@ -85,7 +118,7 @@ a:hover{
 }
 
 .title{
-   padding: 2vh 5vw;
+   padding: 2vh 6vw;
 }
 
 
@@ -93,83 +126,22 @@ a:hover{
 img{
     max-width: 100%;
     height: auto;
-    style: border:2px solid black;
 }
 
-/* Responsive code blocks and tables */
+/* Responsive code blocks and tables
 pre, .outline-text-2, .outline-text-3, outline-text-4{
     max-width: 100%;
     overflow-x: auto;
-}
+}*/
 
-/* Responsive content positioning */
-@media only screen and (min-width: 750px) /* Large screens */
-{
-    .outline-2{
-        padding: 2vh 20vw;
-    }
-
-}
-
-@media only screen and (max-width: 750px) /* Small screens */
-{
-    .outline-2{
-        padding: 2vh 5vw;
-    }
-}
-
-
-/* Code blocks */
-.org-keyword{
-    color: var(--color-primary);
-}
-
-.org-rainbow-delimiters-depth-1{
-    color: var(--color-secondary);
-}
-
-.org-org-meta-line{
-    color: var(--color-primary);
-}
-blockquote{
-    border-left:5px solid var(--color-primary);
-    padding-left: 10px;
-}
-
-.todo{
-    color: var(--color-special-todo);
-}
-
-.done{
-    color: var(--color-primary);
-}
-
-/* Tags.
-   The way org exports tags is a little strange.
-   They are exported as a span with class "tag" containing each
-   of the tags in its own span with class and contents equal to
-   the tags name. This is actually really useful as it allows
-   for targeting both the "tag group" and each tag individually */
-
-.tag{
-    margin-top: 5px;
-    display: block;
-    color: var(--color-soft-white);
-    font-size: var(--font-size-small);
-    font-family: var(--font-normal)
-
-}
-
-.tag > span{
-    background-color: var(--color-secondary);
-    text-transform: uppercase;
-    border-radius: 2px;
-    width: fit-content;
-    height: auto;
-    padding: 1px 5px;
-    margin: 1px;
-}
-
-.underline{
-    text-decoration: underline;
+/* Code */
+pre{
+    margin: 1rem;
+    background-color: #EEE;
+    padding: 1rem;
+    border-radius: 1.2rem;
+    float: right;
+    width: 89%; 
+    font-family: var(--font-normal);
+    font-size: var(--font-size-4) !important;
 }
